# TensorRT-MTR

./: .clang-format  .clang_complete  .cspell.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: codecov.yaml  pre-commit.yaml
include/mtr/: agent.hpp  builder.hpp  cuda_helper.hpp  debugger.hpp  intention_point.hpp  logger.hpp  mtr.hpp  optimize.hpp  polyline.hpp  trajectory.hpp
lib/include/attention/: trt_attn_value_computation.hpp  trt_attn_value_computation_kernel.hpp  trt_attn_weight_computation.hpp  trt_attn_weight_computation_kernel.hpp
lib/include/common/: trt_plugin_base.hpp  trt_plugin_helper.hpp  trt_serialize.hpp
lib/include/knn/: trt_knn_batch.hpp  trt_knn_batch_kernel.hpp  trt_knn_batch_mlogk.hpp  trt_knn_batch_mlogk_kernel.hpp
lib/include/postprocess/: postprocess_kernel.cuh
lib/include/preprocess/: agent_preprocess_kernel.cuh  polyline_preprocess_kernel.cuh  preprocess_kernel.hpp
lib/src/attention/: trt_attn_value_computation.cpp  trt_attn_value_computation_kernel.cu  trt_attn_weight_computation.cpp  trt_attn_weight_computation_kernel.cu
lib/src/knn/: trt_knn_batch.cpp  trt_knn_batch_kernel.cu  trt_knn_batch_mlogk.cpp  trt_knn_batch_mlogk_kernel.cu
lib/src/postprocess/: postprocess_kernel.cu
lib/src/preprocess/: agent_preprocess_kernel.cu  polyline_preprocess_kernel.cu  preprocess_kernel.cu
onnx/: mtr_dynamic.onnx  mtr_static2x7.onnx
src/: builder.cpp  main.cpp  mtr.cpp
test/: agent_test.cpp  intention_point_test.cpp  polyline_test.cpp
